# Weaver

./: .buildinfo  .gitignore  AUTHORS  AUTHORS.yaml  CMakeDocs.txt  CMakeExecutables.txt  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.in  Pasos_instalacion_servers.txt  README.md  RefreshEnv.bat  THIRD_PARTY_LICENSES.md  backup_script.py  dependency_list.txt  genindex.html  index.html  install.sh  linked_Tyrannosaurus_rex_dev_1000.json  log.txt  openTerminalWSL.bat  parameterDescription_simulation.md  parameterDescriptions_worldsParams.md  project_config.json  run_params.json  search.html  vcpkg.json
docs/: .buildinfo  CMakeBuildDocs.txt  CMakeBuildDocsDev.txt  CMakeBuildDocsLocale.txt  CMakeConfigureSphinxConf.txt  CMakeDeployDocs.txt  CMakeDoxygen.txt  CMakeGetAllVersionsAndLanguages.txt  CMakeLists.txt  CMakeUpdateDocs.txt  Doxyfile.in  api_index.html  genindex.html  index.html  objects.inv  package-lock.json  package.json  paquetes_a_instalar.txt  search.html  searchindex.js
docs/assets/scss/: app.scss
docs/assets/scss/components/: _examples.scss
docs/config/_default/: params.toml
docs/config/_default/menus/: menus.en.toml
docs/content/en/: _index.md
docs/content/en/docs/JSON-schema-validator/: _index.md  what-is-json-schema.md
docs/content/en/docs/help/: _index.md  faq.md  how-to-update.md  troubleshooting.md
docs/content/en/docs/prologue/: _index.md  commands.md  introduction.md  quick-start.md
docs/doxygen/: Doxyfile
docs/functions/: generate_doxygen_config.js  generate_hugo_config.js  generate_project_schemas_docs.js
docs/layouts/: index.html
docs/layouts/docs/: single.html
docs/layouts/shortcodes/: alert.html  example.html
docs/source/: CMakeLists.txt  api_index.rst  conf.py.in  index.rst
docs/source/2025.12.12/api/html/: Allele_8h.html  Allele_8h__dep__incl.md5  Allele_8h_source.html  AnimalDecisionProbability_8h__dep__incl.md5  AnimalGrowth_8h__incl.map  AnimalNonStatistical_8h.html  AnimalNonStatistical_8h_source.html  AnimalSearchParams_8h.html  AnimalSearchParams_8h__incl.map  AnimalSpeciesDecisions_8h__incl.md5  AnimalSpeciesDecisions_8h_source.html  AnimalSpeciesGenetics_8h__incl.md5  AnimalSpeciesID_8h.html  AnimalSpecies_8h.html  AnimalSpecies_8h__dep__incl.map  AnimalSpecies_8h__incl.md5  AnimalSpecies_8h_source.html  AnimalStatisticalGrowth_8h__dep__incl.md5  AnimalStatistical_8h.html  Animal_8h__incl.md5  Animal_8h_source.html  AquaticLandscape_8h__incl.md5  AquaticLandscape_8h_source.html  ArthropodsLandscape_8h__incl.map  ArthropodsLandscape_8h__incl.md5  BaseTraitType_8h_source.html  BaseTrait_8h.js  BaseTrait_8h__incl.map  BranchCellMoisture_8h.html  BranchCellMoisture_8h__incl.map  BranchPatchApplicator_8h_source.html  BranchTerrainCell_8h.html  BranchTerrainCell_8h__dep__incl.md5  BranchTerrainCell_8h_source.html  CellElement_8h.html  CellElement_8h_source.html  CellHabitatDomainInterface_8h__dep__incl.map  CellHabitatDomainInterface_8h__incl.map  CellHabitatDomainInterface_8h__incl.md5  CellHabitatDomain_8h__incl.map  (+500 more)
docs/source/2025.12.12/user_guide/json/: moisture_patch.rst
docs/source/2026.01.07/: index.rst
docs/source/2026.01.07/api/html/: Allele_8h.html  Allele_8h.js  AnimalNonStatisticalGrowth_8h.html  AnimalNonStatisticalGrowth_8h__dep__incl.map  AnimalNonStatisticalGrowth_8h__incl.map  AnimalNonStatistical_8h__incl.md5  AnimalSpeciesDecisions_8h__dep__incl.map  AnimalSpeciesDecisions_8h__incl.map  AnimalSpeciesDecisions_8h__incl.md5  AnimalSpeciesGenetics_8h__dep__incl.map  AnimalSpeciesGenetics_8h__incl.map  AnimalSpeciesGrowth_8h.js  AnimalSpeciesID_8h_source.html  AnimalSpecies_8h__dep__incl.md5  AnimalSpecies_8h__incl.md5  AnimalStatisticalGrowth_8h__incl.map  AnimalStatisticalGrowth_8h__incl.md5  AnimalStatistical_8h__dep__incl.map  AnimalStatistical_8h__incl.map  AnimalStatistical_8h__incl.md5  Animal_8h__dep__incl.md5  Animal_8h__incl.map  Animal_8h_source.html  AquaticLandscape_8h.html  Array_8h__incl.map  Axis_8h__dep__incl.map  Axis_8h__dep__incl.md5  BaseTraitType_8h__dep__incl.map  BaseTraitType_8h_source.html  BaseTrait_8h__incl.map  Boolean_8h__dep__incl.map  BranchCellHabitatDomain_8h__dep__incl.md5  BranchCellHabitatDomain_8h__incl.map  BranchCellMoisture_8h__dep__incl.map  BranchCellMoisture_8h__dep__incl.md5  BranchCellObstacle_8h__dep__incl.md5  BranchCellResourceGrowth_8h__dep__incl.map  BranchCellResource_8h__incl.map  BranchCellResource_8h_source.html  BranchPatchApplicator_8h__dep__incl.map  (+593 more)
docs/source/2026.01.07/developer_guide/: code_style.rst
docs/source/2026.01.07/user_guide/json/: habitat_domain_patch.rst
docs/source/2026.01.31/api/html/: AnimalDecisionProbability_8h.js  AnimalNonStatistical_8h_source.html  ArthropodsLandscape_8h.js  BaseTrait_8h.html  BranchCellHabitatDomain_8h__incl.md5  BranchCellObstacle_8h__incl.map  Decisions_8h.js  (+294 more)
docs/source/2026.01.31/developer_guide/: adding_features.rst
docs/source/2026.02.05/testing/: unit_tests.rst
docs/source/2026.02.06/user_guide/: configuration.rst
docs/source/_templates/: versions.html
docs/source/api/: Exceptions_index.rst  Maths_index.rst  Misc_index.rst  Physics_index.rst  Tools_index.rst  World_index.rst
docs/source/api/Exceptions/: LineInfoException.rst
docs/source/api/Maths/: Constants.rst  GaussianDistribution.rst  MathFunctions.rst  OptimisedOperators.rst  Parabola.rst  Random.rst
docs/source/api/Misc/: Coordinate3D.rst  Curve.rst  GlobalVariable.rst  Macros.rst  OntogeneticLink.rst  SimulationConstants.rst  Types.rst  Utilities.rst  ValidatorJSON.rst  string_index.rst
docs/source/api/Physics/: Temperature.rst
docs/source/api/Tools/: Config_index.rst  Updater_index.rst
docs/source/api/World/: AquaticWorld.rst  ArthropodsWorld.rst  DinosaursWorld.rst  LivingBeings_index.rst  Map_index.rst  World.rst  WorldFactory.rst  WorldInterface.rst
docs/source/doxygen/: CMakeLists.txt  Doxyfile.in
docs/source/latest/: conf.in.py
docs/source/latest/_templates/: versions.html
docs/source/latest/reference/: api.rst
docs/source/latest/user_guide/: troubleshooting.rst  usage.rst
lib/: CMakeLists.txt
(+7901 files in other folders)
